fixed the horizontal position of the card-list to prevent the scrollbar to popup meanwhile the card flip animation

--- a/src/components/card-list/card-list.styles.scss
+++ b/src/components/card-list/card-list.styles.scss
@@ -1,11 +1,12 @@
 .card-list {
   width: 100%;
   margin: 0 auto;
+  // padding: 1rem;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   // grid-template-rows: auto;
-  column-gap: 1em;
-  row-gap: 1em;
+  column-gap: 0rem;
+  row-gap: 0.5rem;
 
   justify-content: space-evenly;
   justify-items: center;
